[package]
name = "openbv"
version = "0.1.0"
edition = "2021"

[features]
default = ["plotting"]
plotting = ["dep:plotly", "dep:serde"]

[dependencies]
anyhow = "1.0.83"
image = "0.25.1"
rand = "0.8.5"
rayon = "1.10.0"

plotly = { version = "0.8.4", features = ["kaleido"], optional = true }
serde = { version = "1.0.202", optional = true }
imageproc = "0.25.0"
ab_glyph = "0.2.26"
smallest-enclosing-circle = "0.2.0"

arrow-array = "51.0.0"
futures = "0.3.30"
lancedb = "0.5.2"
tokio = { version = "1.38.0", features = ["full"] }
opencv = "0.93.3"
